--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top web site creator software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-1" data-filter="true" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop web site generator software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-1" data-filter="true" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
     </div>
@@ -473,6 +473,17 @@
     </div>
 </section>
 
+<section class="mbr-section mbr-section__container" id="header3-1" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">A strange encounter</h3>
+                
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-1" style="background-color: rgb(255, 255, 255);">
     <div class=" container boxed-slider" style="padding-top: 120px; padding-bottom: 120px;">
         <div>
@@ -535,6 +546,17 @@
                     <span class="icon-next" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section__container" id="header3-0" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">The stag and the vineyard</h3>
+                <small class="mbr-section-subtitle"></small>
             </div>
         </div>
     </div>
