--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop web site generator software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-1" data-filter="true" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free html web builder software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-1" data-filter="true" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
     </div>
