--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free html web builder software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-1" data-filter="true" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple site generator software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-1" data-filter="true" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
     </div>
@@ -478,7 +478,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">A strange encounter</h3>
-                
+                <small class="mbr-section-subtitle"></small>
             </div>
         </div>
     </div>
@@ -556,7 +556,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">The stag and the vineyard</h3>
-                <small class="mbr-section-subtitle"></small>
+                
             </div>
         </div>
     </div>
